--- a/model_baseline/Baseline.ipynb
+++ b/model_baseline/Baseline.ipynb
@@ -145,53 +145,53 @@
     "def create_model():\n",
     "    model = Sequential()\n",
     "\n",
-    "    model.add(Convolution2D(32, 3, 3, border_mode='same', dim_ordering='tf', input_shape=(ROWS, COLS, 3)))\n",
+    "    model.add(Convolution2D(32, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', input_shape=(ROWS, COLS, 3)))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(32, 3, 3, border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
+    "    model.add(Convolution2D(32, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(LeakyReLU(alpha=0.33))\n",
     "    \n",
-    "    model.add(Convolution2D(64, 3, 3, border_mode='same', dim_ordering='tf'))\n",
+    "    model.add(Convolution2D(64, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(64, 3, 3, border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
+    "    model.add(Convolution2D(64, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(LeakyReLU(alpha=0.33))\n",
     "\n",
-    "    model.add(Convolution2D(128, 3, 3, border_mode='same', dim_ordering='tf'))\n",
+    "    model.add(Convolution2D(128, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(128, 3, 3, border_mode='same', dim_ordering='tf'))\n",
+    "    model.add(Convolution2D(128, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(128, 3, 3, border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    \n",
-    "    model.add(Convolution2D(256, 3, 3, border_mode='same', dim_ordering='tf'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(256, 3, 3, border_mode='same', dim_ordering='tf'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(256, 3, 3, border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
+    "    model.add(Convolution2D(128, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(LeakyReLU(alpha=0.33))\n",
     "    \n",
-    "    model.add(Convolution2D(256, 3, 3, border_mode='same', dim_ordering='tf'))\n",
+    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(256, 3, 3, border_mode='same', dim_ordering='tf'))\n",
+    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(256, 3, 3, border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
+    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
+    "    model.add(BatchNormalization())\n",
+    "    model.add(LeakyReLU(alpha=0.33))\n",
+    "    \n",
+    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
+    "    model.add(BatchNormalization())\n",
+    "    model.add(LeakyReLU(alpha=0.33))\n",
+    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
+    "    model.add(BatchNormalization())\n",
+    "    model.add(LeakyReLU(alpha=0.33))\n",
+    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
     "    model.add(BatchNormalization())\n",
     "    model.add(LeakyReLU(alpha=0.33))\n",
     "    \n",
     "    model.add(AveragePooling2D(pool_size=(7, 7), dim_ordering='tf'))\n",
     "    model.add(Flatten())\n",
-    "    model.add(Dense(len(FISH_CLASSES), activation='softmax'))\n",
+    "    model.add(Dense(len(FISH_CLASSES), init='glorot_normal', activation='softmax'))\n",
     "\n",
     "    model.compile(loss='categorical_crossentropy', optimizer=optimizer, metrics=['accuracy'])\n",
     "    return model"
@@ -335,21 +335,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
