--- a/model_baseline/Baseline.ipynb
+++ b/model_baseline/Baseline.ipynb
@@ -57,6 +57,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "###clear log an checkpoints folder\n",
+    "\n",
+    "if not os.path.exists('./checkpoints'):\n",
+    "    os.mkdir('./checkpoints')\n",
+    "files = glob.glob('./checkpoints/*')\n",
+    "for f in files:\n",
+    "    os.remove(f)\n",
+    "    \n",
+    "#if not os.path.exists('./logs'):\n",
+    "#    os.mkdir('./logs')\n",
+    "files = glob.glob('./logs/*')\n",
+    "for f in files:\n",
+    "    os.remove(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
@@ -132,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -191,15 +214,19 @@
     "    \n",
     "    model.add(AveragePooling2D(pool_size=(7, 7), dim_ordering='tf'))\n",
     "    model.add(Flatten())\n",
+    "    model.add(Dense(256, init='glorot_normal', activation='relu'))\n",
+    "    model.add(Dropout(0.5))\n",
+    "    model.add(Dense(256, init='glorot_normal', activation='relu'))\n",
+    "    model.add(Dropout(0.5))\n",
     "    model.add(Dense(len(FISH_CLASSES), init='glorot_normal', activation='softmax'))\n",
     "\n",
-    "    model.compile(loss='categorical_crossentropy', optimizer=optimizer, metrics=['accuracy'])\n",
+    "    model.compile(loss='categorical_crossentropy', optimizer=optimizer)\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -229,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -239,20 +266,10 @@
     "\n",
     "early_stopping = EarlyStopping(monitor='val_loss', min_delta=0, patience=15, verbose=1, mode='auto')        \n",
     "\n",
-    "if not os.path.exists('./checkpoints'):\n",
-    "    os.mkdir('./checkpoints')\n",
-    "files = glob.glob('./checkpoints/*')\n",
-    "for f in files:\n",
-    "    os.remove(f)\n",
     "model_checkpoint = ModelCheckpoint(filepath='./checkpoints/weights.{epoch:03d}-{val_loss:.4f}.hdf5', monitor='val_loss', verbose=1, save_best_only=False, save_weights_only=False, mode='auto')\n",
     "        \n",
     "learningrate_schedule = ReduceLROnPlateau(monitor='val_loss', factor=0.2, patience=10, verbose=1, mode='auto', epsilon=0.001, cooldown=0, min_lr=0)\n",
     "\n",
-    "#if not os.path.exists('./logs'):\n",
-    "#    os.mkdir('./logs')\n",
-    "#files = glob.glob('./logs/*')\n",
-    "#for f in files:\n",
-    "#    os.remove(f)\n",
     "tensorboard = TensorBoard(log_dir='./logs', histogram_freq=10, write_graph=True, write_images=True)\n"
    ]
   },
@@ -268,7 +285,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/300\n",
-      "3008/3021 [============================>.] - ETA: 0s - loss: 1.7993 - acc: 0.4265"
+      "3008/3021 [============================>.] - ETA: 0s - loss: 1.7651"
      ]
     },
     {
@@ -283,19 +300,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 00000: saving model to ./checkpoints/weights.000-2.1220.hdf5\n",
-      "3072/3021 [==============================] - 125s - loss: 1.7956 - acc: 0.4258 - val_loss: 2.1220 - val_acc: 0.0352\n",
+      "Epoch 00000: saving model to ./checkpoints/weights.000-2.0342.hdf5\n",
+      "3072/3021 [==============================] - 129s - loss: 1.7571 - val_loss: 2.0342\n",
       "Epoch 2/300\n",
-      "3008/3021 [============================>.] - ETA: 0s - loss: 1.4263 - acc: 0.4850Epoch 00001: saving model to ./checkpoints/weights.001-2.1760.hdf5\n",
-      "3072/3021 [==============================] - 112s - loss: 1.4253 - acc: 0.4867 - val_loss: 2.1760 - val_acc: 0.0391\n",
+      "3008/3021 [============================>.] - ETA: 0s - loss: 1.6091Epoch 00001: saving model to ./checkpoints/weights.001-1.9490.hdf5\n",
+      "3072/3021 [==============================] - 117s - loss: 1.6069 - val_loss: 1.9490\n",
       "Epoch 3/300\n",
-      "3008/3021 [============================>.] - ETA: 0s - loss: 1.3590 - acc: 0.5126Epoch 00002: saving model to ./checkpoints/weights.002-2.1733.hdf5\n",
-      "3072/3021 [==============================] - 113s - loss: 1.3611 - acc: 0.5114 - val_loss: 2.1733 - val_acc: 0.2057\n",
+      "2983/3021 [============================>.] - ETA: 1s - loss: 1.5082Epoch 00002: saving model to ./checkpoints/weights.002-1.8258.hdf5\n",
+      "3047/3021 [==============================] - 117s - loss: 1.5070 - val_loss: 1.8258\n",
       "Epoch 4/300\n",
-      "2996/3021 [============================>.] - ETA: 0s - loss: 1.3293 - acc: 0.5137Epoch 00003: saving model to ./checkpoints/weights.003-2.1222.hdf5\n",
-      "3060/3021 [==============================] - 114s - loss: 1.3324 - acc: 0.5127 - val_loss: 2.1222 - val_acc: 0.0911\n",
+      "3008/3021 [============================>.] - ETA: 0s - loss: 1.5324Epoch 00003: saving model to ./checkpoints/weights.003-1.7398.hdf5\n",
+      "3072/3021 [==============================] - 116s - loss: 1.5303 - val_loss: 1.7398\n",
       "Epoch 5/300\n",
-      "1600/3021 [==============>...............] - ETA: 46s - loss: 1.3815 - acc: 0.4856"
+      "3008/3021 [============================>.] - ETA: 0s - loss: 1.4922Epoch 00004: saving model to ./checkpoints/weights.004-1.7409.hdf5\n",
+      "3072/3021 [==============================] - 117s - loss: 1.4910 - val_loss: 1.7409\n",
+      "Epoch 6/300\n",
+      "1600/3021 [==============>...............] - ETA: 49s - loss: 1.4504"
      ]
     }
    ],
@@ -303,6 +323,25 @@
     "#training model\n",
     "\n",
     "model = create_model()\n",
+    "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=300, verbose=1, \n",
+    "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
+    "                    validation_data=valid_generator, nb_val_samples=len(X_valid), nb_worker=3, pickle_safe=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#resume training\n",
+    "\n",
+    "from keras.models import load_model\n",
+    "\n",
+    "model = load_model('./checkpoints/weights.002-1.9846.hdf5')\n",
+    "\n",
     "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=300, verbose=1, \n",
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
     "                    validation_data=valid_generator, nb_val_samples=len(X_valid), nb_worker=3, pickle_safe=True)"
@@ -335,21 +374,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
