--- a/model_baseline/Baseline.ipynb
+++ b/model_baseline/Baseline.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -334,13 +334,22 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/300\n",
+      "1344/3021 [============>.................] - ETA: 69s - loss: 1.3859"
+     ]
+    }
+   ],
    "source": [
     "#resume training\n",
     "\n",
     "from keras.models import load_model\n",
     "\n",
-    "model = load_model('./checkpoints/weights.002-1.9846.hdf5')\n",
+    "model = load_model('./checkpoints/weights.006-1.6722.hdf5')\n",
     "\n",
     "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=300, verbose=1, \n",
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
