--- a/model_baseline/Baseline.ipynb
+++ b/model_baseline/Baseline.ipynb
@@ -57,29 +57,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "###clear log an checkpoints folder\n",
-    "\n",
-    "if not os.path.exists('./checkpoints'):\n",
-    "    os.mkdir('./checkpoints')\n",
-    "files = glob.glob('./checkpoints/*')\n",
-    "for f in files:\n",
-    "    os.remove(f)\n",
-    "    \n",
-    "#if not os.path.exists('./logs'):\n",
-    "#    os.mkdir('./logs')\n",
-    "files = glob.glob('./logs/*')\n",
-    "for f in files:\n",
-    "    os.remove(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
@@ -279,46 +256,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/300\n",
-      "3008/3021 [============================>.] - ETA: 0s - loss: 1.7651"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.5/site-packages/keras/engine/training.py:1470: UserWarning: Epoch comprised more than `samples_per_epoch` samples, which might affect learning results. Set `samples_per_epoch` correctly to avoid this warning.\n",
-      "  warnings.warn('Epoch comprised more than '\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 00000: saving model to ./checkpoints/weights.000-2.0342.hdf5\n",
-      "3072/3021 [==============================] - 129s - loss: 1.7571 - val_loss: 2.0342\n",
-      "Epoch 2/300\n",
-      "3008/3021 [============================>.] - ETA: 0s - loss: 1.6091Epoch 00001: saving model to ./checkpoints/weights.001-1.9490.hdf5\n",
-      "3072/3021 [==============================] - 117s - loss: 1.6069 - val_loss: 1.9490\n",
-      "Epoch 3/300\n",
-      "2983/3021 [============================>.] - ETA: 1s - loss: 1.5082Epoch 00002: saving model to ./checkpoints/weights.002-1.8258.hdf5\n",
-      "3047/3021 [==============================] - 117s - loss: 1.5070 - val_loss: 1.8258\n",
-      "Epoch 4/300\n",
-      "3008/3021 [============================>.] - ETA: 0s - loss: 1.5324Epoch 00003: saving model to ./checkpoints/weights.003-1.7398.hdf5\n",
-      "3072/3021 [==============================] - 116s - loss: 1.5303 - val_loss: 1.7398\n",
-      "Epoch 5/300\n",
-      "3008/3021 [============================>.] - ETA: 0s - loss: 1.4922Epoch 00004: saving model to ./checkpoints/weights.004-1.7409.hdf5\n",
-      "3072/3021 [==============================] - 117s - loss: 1.4910 - val_loss: 1.7409\n",
-      "Epoch 6/300\n",
-      "1600/3021 [==============>...............] - ETA: 49s - loss: 1.4504"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#training model\n",
     "\n",
@@ -340,7 +278,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/300\n",
-      "1344/3021 [============>.................] - ETA: 69s - loss: 1.3859"
+      " 768/3021 [======>.......................] - ETA: 108s - loss: 1.2248"
      ]
     }
    ],
@@ -349,7 +287,7 @@
     "\n",
     "from keras.models import load_model\n",
     "\n",
-    "model = load_model('./checkpoints/weights.006-1.6722.hdf5')\n",
+    "model = load_model('./checkpoints/weights.022-1.0515.hdf5')\n",
     "\n",
     "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=300, verbose=1, \n",
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
@@ -377,6 +315,29 @@
     "submission = pd.DataFrame(test_preds, columns=FISH_CLASSES)\n",
     "submission.insert(0, 'image', test_files)\n",
     "submission.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "###clear log an checkpoints folder\n",
+    "\n",
+    "if not os.path.exists('./checkpoints'):\n",
+    "    os.mkdir('./checkpoints')\n",
+    "files = glob.glob('./checkpoints/*')\n",
+    "for f in files:\n",
+    "    os.remove(f)\n",
+    "    \n",
+    "#if not os.path.exists('./logs'):\n",
+    "#    os.mkdir('./logs')\n",
+    "files = glob.glob('./logs/*')\n",
+    "for f in files:\n",
+    "    os.remove(f)"
    ]
   }
  ],
