--- a/model_VGG16TL/Baseline VGG16 Transfer Learning.ipynb
+++ b/model_VGG16TL/Baseline VGG16 Transfer Learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -11,20 +11,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n",
-      "/usr/local/lib/python2.7/dist-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name ReduceLROnPlateau",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-2aa3de19ceb1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mConvolution2D\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBatchNormalization\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLeakyReLU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mGlobalAveragePooling2D\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFlatten\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDropout\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDense\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimizers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mAdam\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcallbacks\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEarlyStopping\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mModelCheckpoint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mReduceLROnPlateau\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTensorBoard\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimage\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mImageDataGenerator\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnp_utils\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name ReduceLROnPlateau"
+      "Using TensorFlow backend.\n"
      ]
     }
    ],
@@ -42,8 +29,8 @@
     "import seaborn as sns\n",
     "%matplotlib inline \n",
     "\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Convolution2D, BatchNormalization, LeakyReLU, GlobalAveragePooling2D, Flatten, Dropout, Dense\n",
+    "from keras.models import Sequential, Model\n",
+    "from keras.layers import GlobalAveragePooling2D, Flatten, Dropout, Dense\n",
     "from keras.optimizers import Adam\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint, ReduceLROnPlateau, TensorBoard\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
@@ -62,8 +49,8 @@
     "TRAIN_DIR = '../data/train/'\n",
     "TEST_DIR = '../data/test_stg1/'\n",
     "FISH_CLASSES = ['ALB', 'BET', 'DOL', 'LAG', 'NoF', 'OTHER', 'SHARK', 'YFT']\n",
-    "ROWS = 256\n",
-    "COLS = 256\n",
+    "ROWS = 224\n",
+    "COLS = 224\n",
     "BatchSize = 64\n",
     "LearningRate = 1e-4"
    ]
@@ -145,78 +132,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#create my VGG16-alike model\n",
-    "\n",
-    "optimizer = Adam(lr=LearningRate)\n",
-    "\n",
-    "def create_model():\n",
-    "    model = Sequential()\n",
-    "\n",
-    "    model.add(Convolution2D(32, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', input_shape=(ROWS, COLS, 3)))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(32, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    \n",
-    "    model.add(Convolution2D(64, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(64, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "\n",
-    "    model.add(Convolution2D(128, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(128, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(128, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    \n",
-    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    \n",
-    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    model.add(Convolution2D(256, 3, 3, init='he_normal', border_mode='same', dim_ordering='tf', subsample=(2, 2)))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(LeakyReLU(alpha=0.33))\n",
-    "    \n",
-    "    #model.add(AveragePooling2D(pool_size=(7, 7), dim_ordering='tf'))\n",
-    "    model.add(GlobalAveragePooling2D(dim_ordering='tf'))\n",
-    "    model.add(Flatten())\n",
-    "    model.add(Dense(256, init='glorot_normal', activation='relu'))\n",
-    "    model.add(Dropout(0.5))\n",
-    "    model.add(Dense(256, init='glorot_normal', activation='relu'))\n",
-    "    model.add(Dropout(0.5))\n",
-    "    model.add(Dense(len(FISH_CLASSES), init='glorot_normal', activation='softmax'))\n",
-    "\n",
-    "    model.compile(loss='categorical_crossentropy', optimizer=optimizer)\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {
     "collapsed": false
@@ -266,15 +181,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#training model\n",
+    "#stg1 training\n",
     "\n",
-    "model = create_model()\n",
+    "from keras.applications.vgg16 import VGG16\n",
+    "\n",
+    "optimizer = Adam(lr=LearningRate)\n",
+    "\n",
+    "base_model = VGG16(weights='imagenet', include_top=False)\n",
+    "\n",
+    "x = base_model.output\n",
+    "x = GlobalAveragePooling2D()(x)\n",
+    "x = Flatten()(x)\n",
+    "x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
+    "#x = Dropout(0.5)(x)\n",
+    "x = Dense(256, init='glorot_normal', activation='relu')(x)\n",
+    "#x = Dropout(0.5)(x)\n",
+    "predictions = Dense(len(FISH_CLASSES), init='glorot_normal', activation='softmax')(x)\n",
+    "\n",
+    "# this is the model we will train\n",
+    "model = Model(input=base_model.input, output=predictions)\n",
+    "\n",
+    "# first: train only the top layers (which were randomly initialized)\n",
+    "# i.e. freeze all convolutional VGG16 layers\n",
+    "for layer in base_model.layers:\n",
+    "    layer.trainable = False\n",
+    "\n",
+    "# compile the model (should be done *after* setting layers to non-trainable)\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy')\n",
+    "\n",
+    "# train the model on the new data for a few epochs\n",
+    "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=300, verbose=1, \n",
+    "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
+    "                    validation_data=valid_generator, nb_val_samples=len(X_valid), nb_worker=3, pickle_safe=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#stg2 training\n",
+    "\n",
+    "# at this point, the top layers are well trained and we can start fine-tuning\n",
+    "# convolutional layers from inception V3. We will freeze the bottom N layers\n",
+    "# and train the remaining top layers.\n",
+    "\n",
+    "# let's visualize layer names and layer indices to see how many layers\n",
+    "# we should freeze:\n",
+    "for i, layer in enumerate(base_model.layers):\n",
+    "   print(i, layer.name)\n",
+    "\n",
+    "# we chose to train the top 2 inception blocks, i.e. we will freeze\n",
+    "# the first 172 layers and unfreeze the rest:\n",
+    "for layer in model.layers[:14]:\n",
+    "   layer.trainable = False\n",
+    "for layer in model.layers[14:]:\n",
+    "   layer.trainable = True\n",
+    "\n",
+    "# we need to recompile the model for these modifications to take effect\n",
+    "# we use SGD with a low learning rate\n",
+    "model.compile(optimizer=optimizer, loss='categorical_crossentropy')\n",
+    "\n",
+    "# we train our model again (this time fine-tuning the top 2 inception blocks\n",
+    "# alongside the top Dense layers\n",
     "model.fit_generator(train_generator, samples_per_epoch=len(X_train), nb_epoch=300, verbose=1, \n",
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
     "                    validation_data=valid_generator, nb_val_samples=len(X_valid), nb_worker=3, pickle_safe=True)"
@@ -401,7 +379,7 @@
     }
    ],
    "source": [
-    "#resume training\n",
+    "#resume stg1 training\n",
     "\n",
     "from keras.models import load_model\n",
     "\n",
@@ -415,6 +393,27 @@
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
     "                    validation_data=valid_generator, nb_val_samples=len(X_valid), nb_worker=3, pickle_safe=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'glob' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m----------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-3783145eb405>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnewest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mglob\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miglob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'./checkpoints/*'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetctime\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'glob' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
