--- a/model_VGG16TL/Baseline VGG16 Transfer Learning.ipynb
+++ b/model_VGG16TL/Baseline VGG16 Transfer Learning.ipynb
@@ -841,7 +841,9 @@
     "if os.path.exists('../data/data_test_{}_{}.pickle'.format(ROWS, COLS)):\n",
     "    print ('Exist data_test_{}_{}.pickle. Loading test data from file.'.format(ROWS, COLS))\n",
     "    with open('../data/data_test_{}_{}.pickle'.format(ROWS, COLS), 'rb') as f:\n",
-    "        X_test = pickle.load(f)\n",
+    "        data_test = pickle.load(f)\n",
+    "    X_test = data_test['X_test']\n",
+    "    test_files = data_test['test_files']\n",
     "else:\n",
     "    print ('Loading test data from original images. Generating data_test_{}_{}.pickle.'.format(ROWS, COLS))\n",
     "\n",
@@ -850,10 +852,12 @@
     "\n",
     "    for i, im in enumerate(test_files): \n",
     "        X_test[i] = read_image(TEST_DIR+im)\n",
-    "        if i%1000 == 0: print('Processed {} of {}'.format(i, len(test_files)))\n",
+    "        if i%300 == 0: print('Processed {} of {}'.format(i, len(test_files)))\n",
+    "            \n",
+    "    data_test = {'X_test': X_train,'test_files': test_files }\n",
     "    \n",
     "    with open('../data/data_test_{}_{}.pickle'.format(ROWS, COLS), 'wb') as f:\n",
-    "        pickle.dump(X_test, f)\n",
+    "        pickle.dump(data_test, f)\n",
     "            \n",
     "X_test = X_test / 255.\n",
     "\n",
@@ -899,21 +903,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
