--- a/model_VGG16TL/Baseline VGG16 Transfer Learning.ipynb
+++ b/model_VGG16TL/Baseline VGG16 Transfer Learning.ipynb
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -829,7 +829,7 @@
      "output_type": "stream",
      "text": [
       "Exist data_test_224_224.pickle. Loading test data from file.\n",
-      "1000/1000 [==============================] - 26s    \n"
+      "1000/1000 [==============================] - 28s    \n"
      ]
     }
    ],
@@ -854,7 +854,7 @@
     "        X_test[i] = read_image(TEST_DIR+im)\n",
     "        if i%300 == 0: print('Processed {} of {}'.format(i, len(test_files)))\n",
     "            \n",
-    "    data_test = {'X_test': X_train,'test_files': test_files }\n",
+    "    data_test = {'X_test': X_test,'test_files': test_files }\n",
     "    \n",
     "    with open('../data/data_test_{}_{}.pickle'.format(ROWS, COLS), 'wb') as f:\n",
     "        pickle.dump(data_test, f)\n",
@@ -867,10 +867,11 @@
     "model = load_model(files[index])\n",
     "\n",
     "test_preds = model.predict(X_test, batch_size=BatchSize, verbose=1)\n",
+    "#test_preds= test_preds / np.sum(test_preds,axis=1,keepdims=True)\n",
     "\n",
     "submission = pd.DataFrame(test_preds, columns=FISH_CLASSES)\n",
+    "#submission.loc[:, 'image'] = pd.Series(test_files, index=submission.index)\n",
     "submission.insert(0, 'image', test_files)\n",
-    "submission.head()\n",
     "\n",
     "now = datetime.datetime.now()\n",
     "info = 'VGG16TF_' + '{:.4f}'.format(min(val_losses))\n",
@@ -903,21 +904,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
