--- a/model_baseline/Baseline.ipynb
+++ b/model_baseline/Baseline.ipynb
@@ -2,32 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n",
-      "/usr/local/lib/python2.7/dist-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name ReduceLROnPlateau",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-2aa3de19ceb1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mConvolution2D\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBatchNormalization\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLeakyReLU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mGlobalAveragePooling2D\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFlatten\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDropout\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDense\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptimizers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mAdam\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcallbacks\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEarlyStopping\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mModelCheckpoint\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mReduceLROnPlateau\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTensorBoard\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimage\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mImageDataGenerator\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnp_utils\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name ReduceLROnPlateau"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, random, glob\n",
     "import numpy as np\n",
@@ -42,7 +21,7 @@
     "import seaborn as sns\n",
     "%matplotlib inline \n",
     "\n",
-    "from keras.models import Sequential\n",
+    "from keras.models import Sequential, Model,load_model\n",
     "from keras.layers import Convolution2D, BatchNormalization, LeakyReLU, GlobalAveragePooling2D, Flatten, Dropout, Dense\n",
     "from keras.optimizers import Adam\n",
     "from keras.callbacks import EarlyStopping, ModelCheckpoint, ReduceLROnPlateau, TensorBoard\n",
@@ -53,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -70,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -203,8 +182,8 @@
     "    model.add(LeakyReLU(alpha=0.33))\n",
     "    \n",
     "    #model.add(AveragePooling2D(pool_size=(7, 7), dim_ordering='tf'))\n",
+    "    #model.add(Flatten())\n",
     "    model.add(GlobalAveragePooling2D(dim_ordering='tf'))\n",
-    "    model.add(Flatten())\n",
     "    model.add(Dense(256, init='glorot_normal', activation='relu'))\n",
     "    model.add(Dropout(0.5))\n",
     "    model.add(Dense(256, init='glorot_normal', activation='relu'))\n",
@@ -418,34 +397,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exist data_test_256_256.pickle. Loading test data from file.\n",
+      "1000/1000 [==============================] - 16s    \n"
+     ]
+    }
+   ],
    "source": [
     "#test submission\n",
     "\n",
-    "test_files = [im for im in os.listdir(TEST_DIR)]\n",
-    "test = np.ndarray((len(test_files), ROWS, COLS, CHANNELS), dtype=np.uint8)\n",
+    "import datetime\n",
     "\n",
-    "for i, im in enumerate(test_files): \n",
-    "    test[i] = read_image(TEST_DIR+im) / 255.\n",
+    "if os.path.exists('../data/data_test_{}_{}.pickle'.format(ROWS, COLS)):\n",
+    "    print ('Exist data_test_{}_{}.pickle. Loading test data from file.'.format(ROWS, COLS))\n",
+    "    with open('../data/data_test_{}_{}.pickle'.format(ROWS, COLS), 'rb') as f:\n",
+    "        data_test = pickle.load(f)\n",
+    "    X_test = data_test['X_test']\n",
+    "    test_files = data_test['test_files']\n",
+    "else:\n",
+    "    print ('Loading test data from original images. Generating data_test_{}_{}.pickle.'.format(ROWS, COLS))\n",
+    "\n",
+    "    test_files = [im for im in os.listdir(TEST_DIR)]\n",
+    "    X_test = np.ndarray((len(test_files), ROWS, COLS, 3), dtype=np.uint8)\n",
+    "\n",
+    "    for i, im in enumerate(test_files): \n",
+    "        X_test[i] = read_image(TEST_DIR+im)\n",
+    "        if i%300 == 0: print('Processed {} of {}'.format(i, len(test_files)))\n",
+    "            \n",
+    "    data_test = {'X_test': X_test,'test_files': test_files }\n",
     "    \n",
-    "test_preds = model.predict(x, batch_size=BatchSize, verbose=1)\n",
+    "    with open('../data/data_test_{}_{}.pickle'.format(ROWS, COLS), 'wb') as f:\n",
+    "        pickle.dump(data_test, f)\n",
+    "            \n",
+    "X_test = X_test / 255.\n",
+    "\n",
+    "files = glob.glob('./checkpoints/*')\n",
+    "val_losses = [float(f.split('-')[-1][:-5]) for f in files]\n",
+    "index = val_losses.index(min(val_losses))\n",
+    "model = load_model(files[index])\n",
+    "\n",
+    "test_preds = model.predict(X_test, batch_size=BatchSize, verbose=1)\n",
+    "#test_preds= test_preds / np.sum(test_preds,axis=1,keepdims=True)\n",
     "\n",
     "submission = pd.DataFrame(test_preds, columns=FISH_CLASSES)\n",
+    "#submission.loc[:, 'image'] = pd.Series(test_files, index=submission.index)\n",
     "submission.insert(0, 'image', test_files)\n",
-    "submission.head()"
+    "\n",
+    "now = datetime.datetime.now()\n",
+    "info = 'VGG16TF_' + '{:.4f}'.format(min(val_losses))\n",
+    "sub_file = 'submission_' + info + '_' + str(now.strftime(\"%Y-%m-%d-%H-%M\")) + '.csv'\n",
+    "submission.to_csv(sub_file, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image</th>\n",
+       "      <th>ALB</th>\n",
+       "      <th>BET</th>\n",
+       "      <th>DOL</th>\n",
+       "      <th>LAG</th>\n",
+       "      <th>NoF</th>\n",
+       "      <th>OTHER</th>\n",
+       "      <th>SHARK</th>\n",
+       "      <th>YFT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>img_01373.jpg</td>\n",
+       "      <td>0.621550</td>\n",
+       "      <td>0.055312</td>\n",
+       "      <td>0.028962</td>\n",
+       "      <td>0.115232</td>\n",
+       "      <td>0.009943</td>\n",
+       "      <td>0.155889</td>\n",
+       "      <td>0.000903</td>\n",
+       "      <td>0.012209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>img_05426.jpg</td>\n",
+       "      <td>0.176921</td>\n",
+       "      <td>0.037405</td>\n",
+       "      <td>0.008449</td>\n",
+       "      <td>0.190479</td>\n",
+       "      <td>0.012963</td>\n",
+       "      <td>0.549269</td>\n",
+       "      <td>0.001621</td>\n",
+       "      <td>0.022893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>img_03283.jpg</td>\n",
+       "      <td>0.106833</td>\n",
+       "      <td>0.045370</td>\n",
+       "      <td>0.071960</td>\n",
+       "      <td>0.149157</td>\n",
+       "      <td>0.021374</td>\n",
+       "      <td>0.060491</td>\n",
+       "      <td>0.005579</td>\n",
+       "      <td>0.539236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>img_05976.jpg</td>\n",
+       "      <td>0.184785</td>\n",
+       "      <td>0.031446</td>\n",
+       "      <td>0.000875</td>\n",
+       "      <td>0.000701</td>\n",
+       "      <td>0.005245</td>\n",
+       "      <td>0.070570</td>\n",
+       "      <td>0.320857</td>\n",
+       "      <td>0.385522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>img_04872.jpg</td>\n",
+       "      <td>0.373507</td>\n",
+       "      <td>0.018715</td>\n",
+       "      <td>0.004252</td>\n",
+       "      <td>0.015369</td>\n",
+       "      <td>0.311923</td>\n",
+       "      <td>0.059999</td>\n",
+       "      <td>0.002993</td>\n",
+       "      <td>0.213242</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           image       ALB       BET       DOL       LAG       NoF     OTHER  \\\n",
+       "0  img_01373.jpg  0.621550  0.055312  0.028962  0.115232  0.009943  0.155889   \n",
+       "1  img_05426.jpg  0.176921  0.037405  0.008449  0.190479  0.012963  0.549269   \n",
+       "2  img_03283.jpg  0.106833  0.045370  0.071960  0.149157  0.021374  0.060491   \n",
+       "3  img_05976.jpg  0.184785  0.031446  0.000875  0.000701  0.005245  0.070570   \n",
+       "4  img_04872.jpg  0.373507  0.018715  0.004252  0.015369  0.311923  0.059999   \n",
+       "\n",
+       "      SHARK       YFT  \n",
+       "0  0.000903  0.012209  \n",
+       "1  0.001621  0.022893  \n",
+       "2  0.005579  0.539236  \n",
+       "3  0.320857  0.385522  \n",
+       "4  0.002993  0.213242  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission.head()"
+   ]
+  },
+  {
+   "cell_type": "raw",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
     "###clear log an checkpoints folder\n",
     "\n",
@@ -466,21 +598,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
