--- a/model_baseline/Baseline.ipynb
+++ b/model_baseline/Baseline.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -407,7 +407,7 @@
      "output_type": "stream",
      "text": [
       "Exist data_test_256_256.pickle. Loading test data from file.\n",
-      "1000/1000 [==============================] - 16s    \n"
+      "1000/1000 [==============================] - 14s    \n"
      ]
     }
    ],
@@ -452,7 +452,7 @@
     "submission.insert(0, 'image', test_files)\n",
     "\n",
     "now = datetime.datetime.now()\n",
-    "info = 'VGG16TF_' + '{:.4f}'.format(min(val_losses))\n",
+    "info = 'Baseline_' + '{:.4f}'.format(min(val_losses))\n",
     "sub_file = 'submission_' + info + '_' + str(now.strftime(\"%Y-%m-%d-%H-%M\")) + '.csv'\n",
     "submission.to_csv(sub_file, index=False)"
    ]
