--- a/model_VGG16TL/Baseline VGG16 Transfer Learning.ipynb
+++ b/model_VGG16TL/Baseline VGG16 Transfer Learning.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "try ssh\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false
