--- a/model_crop/Aligner.ipynb
+++ b/model_crop/Aligner.ipynb
@@ -83,7 +83,6 @@
     "TRAIN_DIR = '../data/train/'\n",
     "TEST_DIR = '../data/test_stg1/'\n",
     "FISH_CLASSES = ['ALB', 'BET', 'DOL', 'LAG', 'NoF', 'OTHER', 'SHARK', 'YFT']\n",
-    "#FISH_CLASSES = ['ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "modelStr = 'Crop'\n",
     "ROWS = 224\n",
     "COLS = 224\n",
@@ -93,6 +92,126 @@
     "le.fit(FISH_CLASSES)\n",
     "le.transform(FISH_CLASSES)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rescale=1./255,\n",
+    "rotation_range=180,\n",
+    "shear_range=0.2,\n",
+    "zoom_range=[0.9,1.1],\n",
+    "width_shift_range=0.1,\n",
+    "height_shift_range=0.1,\n",
+    "horizontal_flip=True,\n",
+    "vertical_flip=True\n",
+    "\n",
+    "def random_transform(image,\n",
+    "                     rotation_range=0.,\n",
+    "                     width_shift_range=0.,\n",
+    "                     height_shift_range=0.,\n",
+    "                     shear_range=0.,\n",
+    "                     zoom_range=0.,\n",
+    "                     horizontal_flip=False,\n",
+    "                     vertical_flip=False,\n",
+    "                     rescale=None,):\n",
+    "    # x is a single image, so it doesn't have image number at index 0\n",
+    "    img_row_axis = self.row_axis - 1\n",
+    "    img_col_axis = self.col_axis - 1\n",
+    "    img_channel_axis = self.channel_axis - 1\n",
+    "\n",
+    "    # use composition of homographies\n",
+    "    # to generate final transform that needs to be applied\n",
+    "    if rotation_range:\n",
+    "        theta = np.pi / 180 * np.random.uniform(-self.rotation_range, self.rotation_range)\n",
+    "    else:\n",
+    "        theta = 0\n",
+    "    rotation_matrix = np.array([[np.cos(theta), -np.sin(theta), 0],\n",
+    "                                [np.sin(theta), np.cos(theta), 0],\n",
+    "                                [0, 0, 1]])\n",
+    "    if height_shift_range:\n",
+    "        tx = np.random.uniform(-self.height_shift_range, self.height_shift_range) * image.shape[0]\n",
+    "    else:\n",
+    "        tx = 0\n",
+    "\n",
+    "    if width_shift_range:\n",
+    "        ty = np.random.uniform(-self.width_shift_range, self.width_shift_range) * image.shape[1]\n",
+    "    else:\n",
+    "        ty = 0\n",
+    "\n",
+    "    translation_matrix = np.array([[1, 0, tx],\n",
+    "                                   [0, 1, ty],\n",
+    "                                   [0, 0, 1]])\n",
+    "    if shear_range:\n",
+    "        shear = np.random.uniform(-self.shear_range, self.shear_range)\n",
+    "    else:\n",
+    "        shear = 0\n",
+    "    shear_matrix = np.array([[1, -np.sin(shear), 0],\n",
+    "                             [0, np.cos(shear), 0],\n",
+    "                             [0, 0, 1]])\n",
+    "\n",
+    "    if zoom_range[0] == 1 and zoom_range[1] == 1:\n",
+    "        zx, zy = 1, 1\n",
+    "    else:\n",
+    "        zx, zy = np.random.uniform(self.zoom_range[0], self.zoom_range[1], 2)\n",
+    "    zoom_matrix = np.array([[zx, 0, 0],\n",
+    "                            [0, zy, 0],\n",
+    "                            [0, 0, 1]])\n",
+    "\n",
+    "    transform_matrix = np.dot(np.dot(np.dot(rotation_matrix,\n",
+    "                                            translation_matrix),\n",
+    "                                     shear_matrix),\n",
+    "                              zoom_matrix)\n",
+    "\n",
+    "    h, w = x.shape[img_row_axis], x.shape[img_col_axis]\n",
+    "    transform_matrix = transform_matrix_offset_center(transform_matrix, h, w)\n",
+    "    x = apply_transform(x, transform_matrix, img_channel_axis,\n",
+    "                        fill_mode=self.fill_mode, cval=self.cval)\n",
+    "\n",
+    "    if self.horizontal_flip:\n",
+    "        if np.random.random() < 0.5:\n",
+    "            x = flip_axis(x, img_col_axis)\n",
+    "\n",
+    "    if self.vertical_flip:\n",
+    "        if np.random.random() < 0.5:\n",
+    "            x = flip_axis(x, img_row_axis)\n",
+    "\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-033d661aa6f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
