--- a/model_crop/Aligner.ipynb
+++ b/model_crop/Aligner.ipynb
@@ -347,18 +347,18 @@
     "\n",
     "import pickle\n",
     "\n",
-    "if os.path.exists('../data/data_train_annotation_{}_{}.pickle'.format(ROWS, COLS)):\n",
-    "    print ('Exist data_train_annotation_{}_{}.pickle. Loading data from file.'.format(ROWS, COLS))\n",
-    "    with open('../data/data_train_annotation_{}_{}.pickle'.format(ROWS, COLS), 'rb') as f:\n",
-    "        data_train = pickle.load(f)\n",
-    "    X_train = data_train['X_train']\n",
-    "    y_train = data_train['y_train']\n",
-    "    del data_train\n",
+    "if os.path.exists('../data/images_annotations_{}_{}.pickle'.format(ROWS, COLS)):\n",
+    "    print ('Exist images_annotations_{}_{}.pickle. Loading data from file.'.format(ROWS, COLS))\n",
+    "    with open('../data/images_annotations_{}_{}.pickle'.format(ROWS, COLS), 'rb') as f:\n",
+    "        images_annotations = pickle.load(f)\n",
+    "    images = images_annotations['images']\n",
+    "    annotations = images_annotations['annotations']\n",
+    "    del images_annotations\n",
     "else:\n",
-    "    print ('Loading data from original images. Generating data_train_annotation_{}_{}.pickle.'.format(ROWS, COLS))\n",
+    "    print ('Loading data from original images. Generating images_annotations_{}_{}.pickle.'.format(ROWS, COLS))\n",
     "    \n",
     "    images = []\n",
-    "    y_train = []\n",
+    "    annotations = []\n",
     "\n",
     "    crop_classes=FISH_CLASSES[:]\n",
     "    crop_classes.remove('NoF')\n",
@@ -375,21 +375,18 @@
     "                rescale = 1./255,\n",
     "                image = image*rescale\n",
     "                images.append(image)\n",
-    "                y_train.append([l1.iloc[0,1],l1.iloc[0,2],l1.iloc[1,1],l1.iloc[1,2]])\n",
+    "                annotations.append([l1.iloc[0,1],l1.iloc[0,2],l1.iloc[1,1],l1.iloc[1,2]])\n",
     "                print('success')\n",
     "            except:\n",
     "                print('fail')\n",
     "\n",
-    "    X_train = np.asarray(images, dtype=np.float32)\n",
-    "    y_train = np.asarray(y_train, dtype=np.float32)\n",
-    "\n",
     "    #save data to file\n",
-    "    data_train = {'X_train': X_train,'y_train': y_train }\n",
+    "    images_annotations = {'images': images,'annotations': annotations }\n",
     "\n",
-    "    with open('../data/data_train_annotation_{}_{}.pickle'.format(ROWS, COLS), 'wb') as f:\n",
-    "        pickle.dump(data_train, f)\n",
-    "\n",
-    "#X_train, X_valid, y_train, y_valid = train_test_split(X_train, y_train, test_size=0.2, random_state=None, stratify=y_train)"
+    "    with open('../data/images_annotations_{}_{}.pickle'.format(ROWS, COLS), 'wb') as f:\n",
+    "        pickle.dump(images_annotations, f)\n",
+    "        \n",
+    "    del images_annotations"
    ]
   },
   {
