--- a/model_crop/Aligner.ipynb
+++ b/model_crop/Aligner.ipynb
@@ -6979,11 +6979,41 @@
     "print(\"nb_batch_per_epoch=\", nb_batch_per_epoch)\n",
     "for i in range(nb_epoch):\n",
     "    #shuffle epoch\n",
-    "    \n",
+    "    index = random.shuffle(range(epoch_size))\n",
+    "    images = images[index,:,:,:]\n",
+    "    annotations = annotations[index,:,:,:]\n",
     "    for j in range(nb_batch_per_epoch):\n",
-    "        \n",
+    "        x_batch = images[BatchSize*j:BatchSize*(j+1),:,:,:]\n",
+    "        y_batch = annotations[BatchSize*j:BatchSize*(j+1),:,:,:]\n",
+    "        #image augmentation\n",
+    "        for k in range(BatchSize)\n",
+    "            M = random_transform_matrix(image,\n",
+    "                                        rotation_range=20,\n",
+    "                                        shear_range=0.2,\n",
+    "                                        zoom_range=0.1,\n",
+    "                                        width_shift_range=0.1,\n",
+    "                                        height_shift_range=0.1,\n",
+    "                                        horizontal_flip=True,\n",
+    "                                        vertical_flip=True)\n",
+    "            h, w = image.shape[0], image.shape[1]\n",
+    "            image_transformed = cv2.warpAffine(image, M, (w, h), borderMode=0)\n",
+    "            head_transformed = np.dot(M,np.array([y_batch[k][0],y_batch[k][1],1]))\n",
+    "            tail_transformed = np.dot(M,np.array([y_batch[k][2],y_batch[k][3],1]))\n",
+    "            x_head_transformed = head_transformed[0]\n",
+    "            y_head_transformed = head_transformed[1]\n",
+    "            x_tail_transformed = tail_transformed[0]\n",
+    "            y_tail_transformed = tail_transformed[1]\n",
+    "        model.train_on_batch(x_batch, y_batch)\n",
     "    \n",
-    "model.train_on_batch(x, y)"
+    "import Queue\n",
+    "\n",
+    "q = Queue.Queue()\n",
+    "\n",
+    "for i in range(5):\n",
+    "    q.put(i)\n",
+    "\n",
+    "while not q.empty():\n",
+    "    print q.get()"
    ]
   },
   {
