--- a/model_crop/Aligner.ipynb
+++ b/model_crop/Aligner.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os, random, glob, math\n",
     "import numpy as np\n",
@@ -37,11 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "TRAIN_DIR = '../data/train/'\n",
     "TEST_DIR = '../data/test_stg1/'\n",
@@ -58,11 +77,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exist images_annotations_224_224.pickle. Loading data from file.\n"
+     ]
+    }
+   ],
    "source": [
     "#Loading data\n",
     "\n",
@@ -118,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -232,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -241,16 +268,15 @@
     "train_losses = []\n",
     "val_losses = []\n",
     "val_nb_batch = 20\n",
-    "min_val_loss = float('Inf')\n",
+    "\n",
     "\n",
     "def model_train(model, images_train, annotations_train, images_valid, annotations_valid, nb_batch = 1000):\n",
     "    import queue\n",
-    "\n",
     "    q_images = queue.Queue()\n",
     "    q_annotations = queue.Queue()\n",
-    "\n",
+    "    \n",
+    "    min_val_loss = float(\"Inf\")\n",
     "    for i in range(nb_batch):\n",
-    "        print('Batch ',i)\n",
     "        count = 0\n",
     "        x_batch = np.ndarray((BatchSize, ROWS, COLS, 3), dtype=np.float32)\n",
     "        y_batch = np.ndarray((BatchSize, 4), dtype=np.float32)\n",
@@ -289,16 +315,13 @@
     "                    x_batch[count] = image_transformed\n",
     "                    y_batch[count] = [head_transformed[0],head_transformed[1],tail_transformed[0],tail_transformed[1]]\n",
     "                    count += 1\n",
-    "                    plt.imshow(image_transformed)\n",
-    "                    plt.plot(head_transformed[0], head_transformed[1],'rs')\n",
-    "                    plt.plot(tail_transformed[0], tail_transformed[1],'gs')\n",
     "\n",
     "        train_losses.append(model.train_on_batch(x_batch, y_batch))       \n",
-    "        print('train_loss', train_losses[-1])\n",
     "        if i % val_nb_batch == 0:\n",
+    "            print('Batch ', i)\n",
     "            val_losses.append(model.evaluate(images_valid, annotations_valid, batch_size=BatchSize, verbose=1))  \n",
-    "            print('val_losses', val_losses[-1])\n",
-    "            if val_losses[-1]<min_val_loss:\n",
+    "            print('train_loss', train_losses[-1], 'val_losses', val_losses[-1])\n",
+    "            if val_losses[-1] < min_val_loss:\n",
     "                min_val_loss = val_losses[-1]\n",
     "                model.save('./checkpoints/model-{:.4f}.h5'.format(val_losses[-1]))\n",
     "                print('Saving model-{:.4f}.h5'.format(val_losses[-1]))"
@@ -310,7 +333,22 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch  20\n",
+      "660/660 [==============================] - 20s    \n",
+      "train_loss 14345.8 val_losses 11964.0433475\n",
+      "Saving model-11964.0433.h5\n",
+      "Batch  40\n",
+      "660/660 [==============================] - 10s    \n",
+      "train_loss 13572.9 val_losses 10041.8991951\n",
+      "Saving model-10041.8992.h5\n"
+     ]
+    }
+   ],
    "source": [
     "#stg1 training\n",
     "\n",
